@@ -1,5 +1,14 @@
 2010-01-29  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	reviewed by: Xavi Martinez
+
+	* flumotion/component/consumers/applestreamer/applestreamer.py:
+	* flumotion/component/consumers/applestreamer/applestreamer.xml:
+	* flumotion/component/consumers/applestreamer/hlsring.py:
+	Added new property max-extra-buffers
+
+2010-01-29  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* flumotion/component/consumers/applestreamer/resources.py:
 	* flumotion/test/test_resource.py:
 	Don't decode the cookie twice and do it in try/except block
